feat: regen from reassembled orchestrator blueprint (embedding fixes, .env, fake model, AI e2e on both stacks); harness updates
- regenerated all 5 apps + 4 DTO modules: PATCH embedding-regeneration fix
  (SQL), embedding lifecycle ITs on both stacks, .env.example + .gitignore
  .env entries, EmbeddingConfiguration .env fallback + deterministic fake
  model, and — for the first time — AI-search smoke + embedding-lifecycle
  cypress e2e on BOTH the SQL (psql-tag) and cassandra (cass-tag) services,
  via the base blueprint's new prepare-guard-escaping cypress task
- harness: renamed run-all-tests.sh -> saathratri-run-all-tests.sh (+ new
  saathratri-run-all-tests.bat Git Bash wrapper); cypress runs HEADED by
  default (--headless to opt out); e2e phase exports OPENAI_EMBEDDING_FAKE +
  CYPRESS_fakeEmbeddings
- deps: per-app node_modules/lockfiles refreshed (stale after --skip-install
  regen: missing cypress-terminal-report, old @angular/build)
- docs: README/TESTING AI key-supply and fake-model notes
- verified: full harness ALL GREEN (5 backends, 5 frontends, 5 e2e suites
  incl. both embedding-lifecycle specs)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TsfLhC3Jrki6WmZckNGfSN