@@ -67,7 +67,7 @@ public class PgVectorType implements UserType<float[]> {
         } else {
             StringBuilder sb = new StringBuilder("[");
             for (int i = 0; i < value.length; i++) {
-                sb.append(String.format("%.8f", value[i]));
+                sb.append("%.8f".formatted(value[i]));
                 if (i < value.length - 1) {
                     sb.append(",");
                 }
